Changes in r2spss version 0.3.1

    + Renamed functions paletteSPSS(), numberSPSS(), and substrSPSS() to
      palette_SPSS(), number_SPSS(), and substr_SPSS() to be in line with
      naming conventions.


Changes in r2spss version 0.3.0

    + Complete redesign of the inner workings of creating the LaTeX tables,
      which allows for extending the package with addtional tables that mimic
      SPSS.

    + Graphics are now based on ggplot2 instead of base R graphics (except the
      scatter plot matrix).  Functions to set the theme and color scales are
      provided for easily extending the package with additional plots that
      mimic SPSS.

    + All plots and tables allow to easily switch between look of modern SPSS
      versions or older ones.

    + Tables that mimic modern SPSS versions have more LaTeX requirements,
      hence function r2spss.sty() puts a LaTeX style file of the same name
      in a specified folder.

    + Functions now use under_scores rather than camelCase.



Changes in r2spss version 0.2.0

    + More detailed documentation of returned objects.

    + Bugfix in regression() regarding computation of standardized coefficients.

    + Bugfixes in regression() regarding nested model comparisons.

    + Added argument 'change' to function regression() such that tests on the
      R-squared change are only included in model summaries when requested.

    + Added argument 'exact' to wilcoxonTest() such that the p-value of the
      exact Wilcoxon Rank sum test is only computed when requested.

    + Plots now have horizontal axis labels by default, and scientific number
      format in axis annotations is suppressed.

    + Added Eredivisie data set and examples.

    + Added Exams data set and examples.

    + Added package vignette.