@@ -127,27 +127,25 @@ possible to supply a data frame with the following columns:
   footnote.}
 }}
 
-\item{major}{an integer vector specifying the rows of the SPSS table after
-which to draw major grid lines (which always stretch across all columns o
-the table), or \code{NULL} to suppress any major grid lines.  This is only
-relevant for drawing lines in between rows of the table body.  Horizontal
-table borders are always drawn.}
-
-\item{minor}{an integer vector specifying the rows of the SPSS table after
-which to draw minor grid lines that stretch across all columns of the table,
-or \code{NULL} to suppress any minor grid lines.  Alternatively, this can
-be a data frame with the following columns defining partial lines:
+\item{major, minor}{an integer vector specifying the rows of the SPSS
+table after which to draw major or minor grid lines that stretch across
+all columns of the table, or \code{NULL} to suppress the respective grid
+lines.  Alternatively, each of these arguments can be a data frame with
+the following columns defining partial grid lines:
 \describe{
   \item{\code{row}}{an integer vector specifying the rows of the SPSS table
-  after which to draw minor grid lines.}
+  after which to draw grid lines.}
   \item{\code{first}}{an integer vector specifying the first column of each
   partial line.}
   \item{\code{last}}{an integer vector specifying the last column of each
   partial line.}
 }
-Note that minor grid lines can also be suppressed globally within the
-current \R session by setting \code{r2spss_options$set(minor = FALSE)},
-see \code{\link{r2spss_options}}.}
+The only difference between the two type of grid lines is that minor grid
+lines can also be suppressed globally within the current \R session by
+setting \code{r2spss_options$set(minor = FALSE)}, see
+\code{\link{r2spss_options}}.  Also note that these arguments only control
+the grid lines in between rows of the table body.  Horizontal table borders
+are always drawn.}
 }
 \value{
 Nothing is returned, the function is called for its side effects.
